--- a/public/index.html
+++ b/public/index.html
@@ -34,17 +34,14 @@
     integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="theme-color">
   <div id="root"></div>
 
   <title>Ticket Kato</title>
   </head>
 
-  <body>
+ 
     <div id="root"></div>
-
-    
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"></script>
